fix command k z-index isssue

--- a/apps/web-giddh/src/assets/css/style-1.scss
+++ b/apps/web-giddh/src/assets/css/style-1.scss
@@ -1689,7 +1689,7 @@ ul.pills li {
     height: auto;
 }
 .modal {
-    z-index: 1200;
+    z-index: 992;
 }
 .popover {
     z-index: 100;
